crates/ty_python_semantic/resources/mdtest/snapshots/paramspec.md_-_Legacy_`ParamSpec`_-_`ParamSpec`_cannot_s…_(c9dbdc7b13b704a4).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: paramspec.md - Legacy `ParamSpec` - `ParamSpec` cannot specialize a `TypeVar`, and vice versa
mdtest path: crates/ty_python_semantic/resources/mdtest/generics/legacy/paramspec.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from typing import Generic, Callable, TypeVar, ParamSpec
 2 | 
 3 | T = TypeVar("T")
 4 | P = ParamSpec("P")
 5 | 
 6 | class OnlyTypeVar(Generic[T]):
 7 |     attr: T
 8 | 
 9 | def func(c: Callable[P, None]):
10 |     # error: [invalid-type-arguments] "ParamSpec `P` cannot be used to specialize type variable `T`"
11 |     a: OnlyTypeVar[P]
12 | 
13 | class OnlyParamSpec(Generic[P]):
14 |     attr: Callable[P, None]
15 | 
16 | # This is fine due to the special case whereby `OnlyParamSpec[T]` is interpreted the same as
17 | # `OnlyParamSpec[[T]]`, due to the fact that `OnlyParamSpec` is only generic over a single
18 | # `ParamSpec` and no other type variables.
19 | def func2(c: OnlyParamSpec[T], other: T):
20 |     reveal_type(c.attr)  # revealed: (T@func2, /) -> None
21 | 
22 | class ParamSpecAndTypeVar(Generic[P, T]):
23 |     attr: Callable[P, T]
24 | 
25 | # error: [invalid-type-arguments] "Type argument for `ParamSpec` must be either a list of types, `ParamSpec`, `Concatenate`, or `...`"
26 | def func3(c: ParamSpecAndTypeVar[T, int], other: T): ...
```

# Diagnostics

```
error[invalid-type-arguments]: ParamSpec `P` cannot be used to specialize type variable `T`
  --> src/mdtest_snippet.py:11:20
   |
11 |     a: OnlyTypeVar[P]
   |                    ^
   |
  ::: src/mdtest_snippet.py:3:1
   |
 3 | T = TypeVar("T")
   | - Type variable `T` defined here
 4 | P = ParamSpec("P")
   | - ParamSpec `P` defined here
   |

```

```
error[invalid-type-arguments]: Type argument for `ParamSpec` must be either a list of types, `ParamSpec`, `Concatenate`, or `...`
  --> src/mdtest_snippet.py:26:34
   |
26 | def func3(c: ParamSpecAndTypeVar[T, int], other: T): ...
   |                                  ^
   |

```
